{
    "name": "Player",
    "maps": [
        {
            "name": "main",
            "id": "ad196335-1ea3-4839-9dd8-566f2fa0aafe",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "da0c3af9-df87-42d4-9390-304c88ac7484",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "160651b5-f7d8-43ea-b79e-24d1585f6715",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "7d42663e-20de-4f70-bd45-b970dc74bc20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "b0fc909a-9e1b-44b6-86d8-c7e5aca2cdc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "ab21e3f9-7ae9-4184-a6c0-5566535a3b8d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "58158d22-b729-4dcc-b01a-791285e5ed66",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8d8457f6-0552-445f-a3b7-69df977d8626",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f9d48e7c-4b81-4682-826b-5a08e685ad46",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bab511ca-34e7-4644-9d2f-e2a17555b29a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47bc3e12-4a8b-4afe-9d28-bac11d0e3878",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ArmeVerticale",
            "id": "254eb956-ab4a-4ab4-9349-0daf12f2451d",
            "actions": [
                {
                    "name": "ShootUp",
                    "type": "Value",
                    "id": "9f4c476a-f9c9-4a5f-9589-ad9cb56d4617",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Vertical",
                    "id": "68a6fe0e-f065-4fe8-9a9f-c7fc3b80a9df",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShootUp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fe74035a-9488-49ad-aeb9-803f7179c43e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "df2e461b-2d7a-4b59-8a17-a9cc6e2eb616",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ArmeHorizontale",
            "id": "52f280a7-6d8f-4c62-9fdd-7f39fde25d32",
            "actions": [
                {
                    "name": "ShootRight",
                    "type": "Value",
                    "id": "169bfebc-a089-410a-8e7c-5b566df3f29b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "095fdadc-f26c-45cb-bbbb-067fa2ddbd12",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "610b573e-87fd-4876-9e1f-32c2617f8c08",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f1c9b6b2-d8c5-4490-bc60-1b99d9bda40a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ArmeZone",
            "id": "783f1cb3-9379-4980-9f0c-0d2afd275b1c",
            "actions": [
                {
                    "name": "ShootDir",
                    "type": "Value",
                    "id": "449dfede-04b9-41ae-83b6-39cc894969d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Dirrection",
                    "id": "d4d582da-999f-4b74-be57-bf90e6363592",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cc42dbd5-67fb-4a8a-82e6-e8f6d7339531",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c2a4130a-f943-4192-8d5a-adb53f0911fd",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7fdadb0f-8d64-4f32-bf66-5c922deef90f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "86d370b9-bc58-42bb-838a-04ea0036e63f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "6fcaad33-f079-4ad5-a770-4b3d7c5f11bf",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Button",
                    "id": "02213e52-0b2d-41fb-8958-299a45db14f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa3ce9b0-b36b-450e-86e5-336c924606ed",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WavePause",
            "id": "ae421471-5711-463c-8720-7bb773b79490",
            "actions": [
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "5a9358dd-7650-4957-aec9-906f11d01d24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "25417ce3-f669-4c3f-ab03-d2efc70d2188",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "bb509ec3-aeb5-4fb6-9cd0-da5b91ef492f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfd737e3-41c8-4239-9915-eb32cc77743c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a1c656e-4b41-4183-bba3-338e72c5edb8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7003ff4a-2525-4c38-a948-7a634f1065ea",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}